--- a/main/templates/test2.html
+++ b/main/templates/test2.html
@@ -2,15 +2,42 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <link rel="stylesheet" href="../static/style/style.css"/>
+    <link rel="stylesheet" href="../static/style/checbox_style.css"/>
     <title>Title</title>
 </head>
 <body>
-<h1>Тестовая страница</h1>
-{% for todo in todo_list %}
-<ul>
-    <li>{{todo.text}}- <span>{{todo.created_at}}</span></li>
-</ul>
-
-{% endfor %}
+<section>
+    <div class="create_container">
+        <input
+                type="text"
+                class="create_input"
+                placeholder="Напишите сюда задачу"
+        />
+        <button class="create_btn">Добавить</button>
+    </div>
+    <div class="todo_container">
+        {% for todo in todo_list%}
+        <div class="todo_item">
+            <div class="todo_item_header">
+                <label class="checkbox_container">
+                    <input type="checkbox"/>
+                    <span class="checkmark"></span>
+                </label>
+                <h4>{{todo.text}}</h4>
+            </div>
+            <div class="todo_item_footer">
+                <p>{{todo.created_at}}</p>
+                <div class="action_btns">
+                    <img src="../static/assets/star.png" alt="star"/>
+                    <img src="../static/assets/x.png" alt="delete"/>
+                </div>
+            </div>
+        </div>
+        {% endfor %}
+    </div>
+</section>
 </body>
 </html>
