added meeting page

--- a/main/templates/test.html
+++ b/main/templates/test.html
@@ -25,6 +25,11 @@
         (с использованием django.contrib.staticfiles.finders.AppDirectoriesFinder ). Если присутствует несколько файлов
         с одинаковым именем, будет использован первый найденный файл.
     </li>
+    <li><b>ORM (Object-Relation Mapping)clhelp</b> -  – общее название для фреймворков или библиотек, позволяющих
+        автоматически связать базу данных с кодом. Они стараются скрыть существование базы данных настолько, насколько
+        это возможно. Взамен программисту дают возможность оперировать данными в базе через специальный интерфейс.
+        Вместо построения SQL-запросов, программист вызывает простые методы, а всю остальную работу берёт на себя ORM.
+    </li>
 </ul>
 </body>
 </html>
