--- a/main/templates/test2.html
+++ b/main/templates/test2.html
@@ -1,3 +1,5 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -11,12 +13,16 @@
 <body>
 <section>
     <div class="create_container">
-        <input
-                type="text"
-                class="create_input"
-                placeholder="Напишите сюда задачу"
-        />
-        <button class="create_btn">Добавить</button>
+        <form action="{% url 'add-todo'%}" method="POST">
+            {%csrf_token%}
+            <input
+                    type="text"
+                    class="create_input"
+                    placeholder="Напишите сюда задачу"
+                    name="todo_text"
+            />
+            <button class="create_btn">Добавить</button>
+        </form>
     </div>
     <div class="todo_container">
         {% for todo in todo_list%}
