--- a/main/templates/test2.html
+++ b/main/templates/test2.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <link rel="stylesheet" href="../static/style/style.css"/>
     <link rel="stylesheet" href="../static/style/checbox_style.css"/>
-    <title>Title</title>
+    <title>Todo List    </title>
 </head>
 <body>
 <section>
@@ -26,7 +26,11 @@
     </div>
     <div class="todo_container">
         {% for todo in todo_list %}
-            <div class="todo_item">
+            <div class="todo_item
+            {% if todo.is_favorite %}
+                marked
+            {% endif %}
+            ">
                 <div class="todo_item_header">
                     <label class="checkbox_container">
                         <input type="checkbox"/>
@@ -37,9 +41,14 @@
                 <div class="todo_item_footer">
                     <p>{{ todo.created_at }}</p>
                     <div class="action_btns">
-                        <img src="../static/assets/star.png" alt="star"/>
-                        <a href="{% url 'delete-todo' todo.id %}"><img src="../static/assets/x.png"
-                                                                       alt="delete"/></a>
+                      {% if todo.is_favorite %}
+                            <a href="{% url 'unmark-todo' todo.id %}"><img src="{% static 'assets/star.png' %}" /></a>
+                        {% else %}
+                            <a href="{% url 'mark-todo' todo.id %}"><img src="{% static 'assets/star (1).png' %}" /></a>
+                        {% endif %}
+                        <a href="{% url 'delete-todo' todo.id %}">
+                            <img src="../static/assets/x.png" alt="delete"/>
+                        </a>
                     </div>
                 </div>
             </div>
