--- a/main/static/style/style.css
+++ b/main/static/style/style.css
@@ -1,118 +1,129 @@
 * {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-  color: #263238;
-  font-family: sans-serif;
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    color: #263238;
+    font-family: sans-serif;
 }
 
 section {
-  width: 100%;
-  padding: 20px;
-  display: flex;
-  align-items: center;
-  flex-direction: column;
+    width: 95%;
+    margin: 2em auto;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
 }
 
 .create_container {
-  width: 80%;
+    width: 86%;
+}
+
+.create_container form {
+    display: flex;
+    justify-content: center;
 }
 
 .create_input {
-  padding: 15px 10px;
-  font-size: 18px;
-  width: 80%;
-  outline: none;
+    padding: 15px 10px;
+    font-size: 18px;
+    width: 80%;
+    outline: none;
 }
 
 .create_btn {
-  padding: 18px 20px;
-  background-color: #ce93d8;
-  border: none;
-  outline: none;
-  color: #fff;
-  font-size: 18px;
-  text-transform: uppercase;
-  font-weight: bold;
-  cursor: pointer;
-  border-radius: 5px;
+    padding: 18px 20px;
+    background-color: #ce93d8;
+    border: none;
+    outline: none;
+    color: #fff;
+    font-size: 18px;
+    text-transform: uppercase;
+    font-weight: bold;
+    cursor: pointer;
+    border-radius: 5px;
 }
 
 .create_btn:active {
-  box-shadow: 0px 5px 15px 0px #ce93d8;
+    box-shadow: 0px 5px 15px 0px #ce93d8;
 }
 
 .todo_container {
-  padding: 30px 20px;
-  display: flex;
-  justify-content: space-around;
-  flex-wrap: wrap;
-  width: 100%;
+    padding: 30px 20px;
+    display: flex;
+    justify-content: space-around;
+    flex-direction: column;
+    align-items: center;
+    flex-wrap: wrap;
+    width: 100%;
 }
 
 .todo_item {
-  border: 1px solid gray;
-  border-radius: 5px;
-  width: 24%;
-  padding: 10px 15px;
-  background-color: #c8e6c9;
-  margin-bottom: 20px;
+    border: 1px solid gray;
+    border-radius: 5px;
+    width: 86%;
+    padding: 10px 15px;
+    background-color: #c8e6c9;
+    margin-bottom: 20px;
 }
 
 .todo_item.done {
-  background-color: #e0e0e0;
-  color: #757575;
-  text-decoration: line-through;
+    background-color: #e0e0e0;
+    color: #757575;
+    text-decoration: line-through;
 }
 
 .todo_item.done h4,
 .todo_item.done p,
 .todo_item.done span {
-  color: #757575;
+    color: #757575;
 }
 
 .todo_item.done img {
-  opacity: 0.5;
+    opacity: 0.5;
 }
 
 .todo_item.marked {
-  background-color: #ffe082;
-  border: 2px solid #fad66a;
+    background-color: #ffe082;
+    border: 2px solid #fad66a;
 }
 
 .todo_item_header {
-  display: flex;
-  align-items: center;
-  min-height: 35px;
+    display: flex;
+    align-items: center;
+    min-height: 35px;
 }
 
 .todo_item_header h4 {
-  font-size: 18px;
+    font-size: 18px;
+}
+
+.todo_item_header h4 a {
+    text-decoration: none;
 }
 
 .todo_item_footer {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
 .todo_item_footer p {
-  font-size: 15px;
+    font-size: 15px;
 }
 
 .todo_item_footer .action_btns {
-  display: flex;
+    display: flex;
 }
 
 .todo_item_footer img {
-  width: 25px;
-  height: 25px;
-  margin: 0 5px;
-  cursor: pointer;
+    width: 25px;
+    height: 25px;
+    margin: 0 5px;
+    cursor: pointer;
 }
 
 .todo_item_footer img:last-child {
-  width: 20px;
-  height: 20px;
-  margin: 5px 5px 0;
+    width: 20px;
+    height: 20px;
+    margin: 5px 5px 0;
 }
